--- a/trunk/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
+++ b/trunk/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
@@ -4,8 +4,8 @@
   PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
   "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 
-<<web-app>
-  <display-name>Struts Blank Application</display-name>
+<web-app>
+  <display-name>Doom Box</display-name>
   
   <servlet>
     <servlet-name>action</servlet-name>
@@ -69,26 +69,29 @@
     <taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
     <taglib-location>/WEB-INF/c.tld</taglib-location>
   </taglib>
-
-	<login-config>
-		<auth-method>FORM</auth-method>
-		<form-login-config>
-			<form-login-page>/pages/login.jsp</form-login-page>
-			<form-error-page>/pages/erro.jsp</form-error-page>
-		</form-login-config>
-	</login-config>
-	
-	<security-constraint>
-		<web-resource-collection>
+  
+  
+  <login-config>
+  	<auth-method>FORM</auth-method>
+  	<form-login-config>
+  		<form-login-page>/pages/login.jsp</form-login-page>
+  		<form-error-page>/pages/erro.jsp</form-error-page>
+  	</form-login-config>
+  </login-config>
+  
+  	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
+  
+  <security-constraint>
+  		<web-resource-collection>
 			<web-resource-name>index</web-resource-name>
 			<url-pattern>/pages/index.jsp</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
-		</auth-constraint>	
-	</security-constraint>
+		</auth-constraint>
+  </security-constraint>
 	
-	<security-role>
-		<role-name>admin</role-name>
-	</security-role>
+
 </web-app>
