--- a/trunk/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
+++ b/trunk/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
  
   <welcome-file-list>
-    <welcome-file>pages/index.jsp</welcome-file>
+    <welcome-file>pages/login.jsp</welcome-file>
   </welcome-file-list>
 
 
@@ -70,28 +70,26 @@
     <taglib-location>/WEB-INF/c.tld</taglib-location>
   </taglib>
   
-  
-  <login-config>
-  	<auth-method>FORM</auth-method>
-  	<form-login-config>
-  		<form-login-page>/pages/login.jsp</form-login-page>
-  		<form-error-page>/pages/erro.jsp</form-error-page>
-  	</form-login-config>
-  </login-config>
-  
-  	<security-role>
-		<role-name>admin</role-name>
-	</security-role>
-  
-  <security-constraint>
-  		<web-resource-collection>
+  	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/pages/login.jsp</form-login-page>
+			<form-error-page>/pages/erro.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+	
+	<security-constraint>
+		<web-resource-collection>
 			<web-resource-name>index</web-resource-name>
 			<url-pattern>/pages/index.jsp</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
-		</auth-constraint>
-  </security-constraint>
+		</auth-constraint>	
+	</security-constraint>
 	
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
 
 </web-app>
