--- a/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
+++ b/Trabalho_Ti_DoomBox/WebContent/WEB-INF/web.xml
@@ -3,9 +3,9 @@
 <!DOCTYPE web-app
   PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
   "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
-
+  
 <web-app>
-  <display-name>Doom Box</display-name>
+  <display-name>Struts Blank Application</display-name>
   
   <servlet>
     <servlet-name>action</servlet-name>
